# FastAPI_marketplace_15102023

./: crud.py  main.py  pyproject.toml  rabbit.py  rabbit1.py
alembic/: env.py
alembic/versions/: 2023_10_16_1400-67e5a6278728_create_users_table.py  2023_10_16_1501-c3942e702de1_create_products_table.py  2023_10_16_1527-49855f96eb57_create_reviews_table.py  2023_10_16_1733-ad998f93ff5d_create_account_table.py  2023_10_16_1818-fe911b25194d_reformat_user_table.py  2023_10_22_1428-1479c9d697df_try1.py  2023_10_22_2042-80954e5ba1c0_create_order_product_association_table.py  2023_10_23_1516-836660321b91_fix.py  2023_10_23_1634-cda0ad5feabd_qwerty.py  2023_10_23_1639-a4b07596da1f_added_column_count_to_association_table.py  2023_10_24_0756-c904fdd22e08_create_utit_price.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
api_v1/users/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  account.py  base.py  cart.py  db.py  mixins.py  order.py  order_product_association.py  product.py  review.py  user.py
