[tool.poetry]
name = "fastapi-marketplace-15102023"
version = "0.1.0"
description = ""
authors = ["Viktor <viktor.glikhov89@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = { extras = ["standart"], version = "^0.103.2" }
alembic = "^1.12.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.22" }
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"
pika = "^1.3.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
